--- a/uppgifter/CSS2.14/2.14.css
+++ b/uppgifter/CSS2.14/2.14.css
@@ -17,6 +17,7 @@ height:100vh;
     background-color: grey;
     font-family: sans-serif;
     font-size: 3rem;
+    font-weight: bold;
 }
 .box2{
     display: flex;
@@ -28,6 +29,7 @@ height:100vh;
 background-color: darkgrey;
 font-family: sans-serif;
 font-size: 3rem;
+font-weight: bold;
 }
 .box3{
     display: flex;
@@ -37,6 +39,7 @@ font-size: 3rem;
     text-align: center;
     height: 50vh;
     width: 100%;
+    font-weight: bold;
 
 background-color: lightgrey;
 font-family: sans-serif;
