--- a/uppgifter/2.17/2.17.css
+++ b/uppgifter/2.17/2.17.css
@@ -5,11 +5,19 @@ background-color: crimson;
     }
     
     .knapp{
+        font-weight: bold;
 color: crimson;
 font-family: sans-serif;
 border: 2px solid crimson;
 border-radius: 50px;
-padding: 5px;
+padding: 10px;
+padding-left: 50px;
+padding-right: 50px;
 font-size: 30px;
-margin-left: 50%;
+    }
+
+    body{
+        display: flex;
+        justify-content: center;
+        margin-top: 50vh;
     }
