--- a/uppgifter/2.19/cow.css
+++ b/uppgifter/2.19/cow.css
@@ -16,5 +16,5 @@ background-size: 300px 300px;
 background-position: center;
 border: 40px solid;
 border-color: white;
-box-shadow: 12px 12px 30px darkgray, 12px 12px 60px darkgray inset;
+box-shadow: 0.1px 0.1px 3px black, 0.1px 0.1px 3px black inset;
 }
