--- a/uppgifter/project yes/style.css
+++ b/uppgifter/project yes/style.css
@@ -4,17 +4,8 @@ background-color: rgb(58, 54, 69);
 overflow-x: hidden;
 
 }
-
-.jam_cat {
-background-repeat: repeat;
-margin-top: 1%;
-height: 100%;
-width: 45%;
-
-display: inline-block;
-}
-
 .topbar {
+    text-align: center;
     display: flex;
 width: 100%;
 height: 20vh;
@@ -27,10 +18,10 @@ box-shadow: 5px 6px 20px black;
 
 
 h1 {
-    
+    margin-top: 10%;
     color: white;
     font-weight: bold;
-    font-size: calc(2.5vw + 2.5vh);
+    font-size: calc(3vw + 3vh);
     font-family: sans-serif;
 }
 
@@ -44,13 +35,12 @@ img {
     margin-top: 1%;
     height: 100%;
     width: 45%;
+    max-width: 150px;
     min-width: 100px;
 
 }
 
-.topbar:hover {
-    background-image: url(catjam.gif);
-}
+
 
 .img2 {
     margin-top: 1%;
@@ -84,36 +74,44 @@ height:  100%;
  
         }
 
-        .parent {
-            display: flex;
-            justify-content: center;
 
 
-            width: 100%;
-            height: 120vh;
-            min-height: 80px;
-
-        }
-
-        .meme1 {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 5%;
-            width: 40%;
-            height: 40vh;
-            min-height: 100px;
-            min-width: 400px;
-            background-color: rgb(58, 54, 69);
-            box-shadow: 5px 6px 20px black;
-
-        }
-
-        .img3 {
-            width: 60%;
-            height: 40vh;
-            min-height: 50px;
-            min-width: 350px;
 
 
-        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
