--- a/uppgifter/Lokal besöksräknare/style.css
+++ b/uppgifter/Lokal besöksräknare/style.css
@@ -1,7 +1,22 @@
-body {
-height: 100vh;
-width: 100vw;
-display: flex;
-justify-content: center;
-align-items: center;
-}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: white;
+    color: black;
+    font-family: sans-serif;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 1.25;
+  }
+  
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+  }
