--- a/uppgifter/optima replica/style.css
+++ b/uppgifter/optima replica/style.css
@@ -6,6 +6,18 @@
 }
 
 
+select {
+    margin-bottom: -1px;
+margin-left: 30px;
+margin-right: 35px;
+width: 260px;
+border: none;
+font-family: roboto;
+font-weight: 500;
+font-size: 1.4rem;
+}
+
+
 
 h2 {
     display: flex;
@@ -26,37 +38,37 @@ display: flex;
 }
 
 .topbox1 {
-    width: 300px;
+    width: 310px;
     height: 12vh;
 
 
 }
 .topbox2 {
     width: 100px;
-    height: 12vh;
+    height: 13vh;
 display: flex;
 justify-content: center;
 align-items: center;
 }
 .topbox3 {
     width: 300px;
-    height: 12vh;
+    height: 13vh;
     display: flex;
 justify-content: center;
 align-items: center;
-margin-left: -30px;
+
 }
 .topbox4 {
-    width: 200px;
-    height: 12vh;
+    width: 230px;
+    height: 13vh;
     display: flex;
 justify-content: center;
 align-items: center;
 margin-left: -20px;
 }
 .topbox5 {
-    width: 250px;
-    height: 12vh;
+    width: 300px;
+    height: 13.3vh;
     display: flex;
 justify-content: center;
 align-items: center;
@@ -64,7 +76,7 @@ margin-left: -30px;
 }
 .topbox6 {
     width: 200px;
-    height: 12vh;
+    height: 13.3vh;
     display: flex;
 justify-content: center;
 align-items: center;
@@ -166,7 +178,6 @@ width: 100%;
 .box2 {
     height: 7vh;
     width: 100%;
-
     }
 
 
@@ -217,4 +228,22 @@ background-color: #bbc04b;;
                 padding: 0;
             width: 32px;
             height: 30px;
+            }
+
+            .bigImage {
+                background-color: red;
+                width: 100%;
+                height: 78vh;
+                background-image: url(optima2.PNG);
+                background-size: cover;
+            }
+
+
+            .p7 {
+                margin-top: 250px;
+                margin-left: 100px;
+font-size: 5rem;
+color: white;
+font-weight: 500;
+
             }
