--- a/uppgifter/egen hemsida/style.css
+++ b/uppgifter/egen hemsida/style.css
@@ -1,4 +1,5 @@
-* {
+body {
+    overflow-x: hidden;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -12,7 +13,6 @@
 .footerChild1 {
     text-align: center;
     margin-top: 70px;
-
 width: 100%;
 height: 6vh;
 }
@@ -81,6 +81,7 @@ height: 10vh;
         background-color: rgb(0, 30, 161);
     }
 .img3 {
+    box-shadow: 0px 0px 0px black;
     border-radius: 80px;
     width: 100px;
     height: 70px;
@@ -142,6 +143,7 @@ li {
     font-family: Roboto; 
 }
 img {
+    box-shadow: 1px 1px 10px black;
 width: 100%;
 height: 800px;
 }
@@ -151,18 +153,19 @@ height: 800px;
     width: 600px;
     height: 350px;
     border-radius: 5px;
+    box-shadow: 1px 1px 10px black;
     }
     
 
 .topbar {
     width: 100%;
-    height: 4vh;
+    height: 10vh;
     background-color: rgb(221, 221, 221);
 }
 
 .topbar2 {
     width: 100%;
-    height: 7vh;
+    height: 9vh;
     background-color: rgb(255, 255, 255);
 }
 
